# danileg-first-python-project

./: LICENSE  README.md  app.py  pyproject.toml
